src/test/deca/context/valid/created/Objet/passe3_8.deca
// Description:
//    teste un method call
// Resultats:
//    Erreur contextuelle
//    Ligne 9 : Error: Illegal RValue type, got int, expected boolean

class A {
    int m(float a, boolean b) {
        return 3;
    }
}

{
    A a = new A();
    int x = a.m(3, true);
}