src/test/deca/context/invalid/created/SansObjet/InvalidTypePrintln.deca
// Description:
//  Teste l'appel de println avec un boolean
// Resultats:
//   InvalidTypePrintln.deca:7:12: Error: Expected expression type is int, float or string, got boolean

{
    println(true);
}